# disket.club

./: .env.template  .gitignore  CONTRIBUTION.md  LICENSE.txt  README.md  hugo.toml  pyproject.toml  update_products.py
.github/workflows/: python-app.yml
app/: pyproject.toml  requirements.txt  settings.py  urls.py
app/app/: settings.py  urls.py
app/disket/: forms.py  models.py  urls.py  views.py
app/disket/migrations/: 0001_initial.py  0002_remove_disket_aspect_ratio_remove_disket_description_and_more.py
app/disket/templates/disket/: list.html
app/disket/templates/page/: detail.html  home.html  upload.html
app/locale/tr/LC_MESSAGES/: django.po
app/protile/: apps.py
app/protile/templates/protile/: detail.html
app/templates/: base.html
assets/css/: base.css
content/: _index.md
content/foo/: bar.md
data/: products.json
disket/: admin.py  forms.py  models.py  urls.py  views.py
disket/migrations/: 0003_alter_disket_options_remove_disket_title_and_more.py  0004_alter_disket_options_alter_disketversion_options_and_more.py
disket/templates/disket/: _list.html  detail.html  list.html  upload.html
disket/templatetags/: randint.py
layouts/: index.html
layouts/_default/: baseof.html
locale/tr/LC_MESSAGES/: django.po
protile/: urls.py  views.py
protile/templatetags/: md5_string.py
public/: index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/foo/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/post-1/: index.html
public/tags/: index.html  index.xml
templates/: base.html
(+8 files in other folders)
