[project]
name = "disket-club"
version = "0.1.0"
description = "host websites under 1.44mb"
authors = [
    {name = "Mirat Can Bayrak",email = "miratcanbayrak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.0,<6.0)",
    "django-allauth (>=65.3.1,<66.0.0)",
    "requests (==2.32.3)"
]

[tool.poetry]
packages = [{include = "disket"}]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
