[project]
name = "disket-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "django>=5.1.6",
    "django-allauth>=65.4.0",
    "django-environ>=0.12.0",
    "requests>=2.32.3",
    "ruff>=0.9.5",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 79